syntax = "proto3";

package login;

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string userId = 3;
  string token = 4;
  string error = 5;
}

service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse);
}
